# virtual-therapy-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
config/: prometheus.yml
docs/: local-testing.md
src/therapeutic_agent/: __init__.py
src/therapeutic_agent/api/: __init__.py  main.py
src/therapeutic_agent/cli/: __init__.py  main.py
src/therapeutic_agent/core/: __init__.py  anthropic_client.py  config.py  exceptions.py  session_manager.py
src/therapeutic_agent/safety/: __init__.py  engine.py  validators.py
src/therapeutic_agent/storage/: database.py  models.py  repository.py
tests/: __init__.py  conftest.py
tests/integration/: test_session_flow.py
tests/unit/: test_safety_validators.py
